2006.12.11: David Nichols
	* more Datasource and ManagedDatasource cleanups
	* Exception API cleanup
	* fixed a bug in object method execution, when a method is called on
	  NULL, no exception was thrown

2006.12.10: David Nichols
	* more Datasource cleanups

2006.12.09: David Nichols
	* Context and Find cleanups
	* partial DBI cleanup
	* partial Datasource cleanup

2006.12.01: David Nichols
	* ConstantList: more api cleanups
	* QoreClassList: more api cleanups

2006.11.30: David Nichols
	* implemented default destructors for builtin classes
	* fixed a memory leak with the ARGV variable
	* more API cleanups, partial charset.cc|h cleanup

2006.11.29: David Nichols
	* more QoreClass cleanups
	* enabled inheritance in builtin classes
	* improved qore c++ class interface
	* more API cleanups

2006.11.28: David Nichols
	* more QoreClass cleanups, inheritance fixes

2006.11.26: David Nichols
	* more QoreClass cleanups

2006.11.25: David Nichols
	* more QoreClass API improvements, more use of STL features where
	  appropriate
	* more safe_dslist improvements to better implement an STL-like
	  interface

2006.11.20: David Nichols
	* folded ConstantList, QoreClassList, NamespaceList into Namespace 
	  implementation
	* cleaned up Namespace interface, visibility tags added
	* partially cleaned up QoreClass interface, visibility tags added
	* disabled use of stlport4 on Solaris

2006.11.19: David Nichols
	* enabled --enable-single-compilation-unit configure option to compile
	  qore as a single file whenever possible
	* added lib/ql_json.cc for JSON support
	* added ql_debug.cc in single compilation unit in lib
	* cleaned up QoreString interface, tagged for gcc shared object 
	  visibility
	* cleaned up Hash interface, visibility tags added 
	* cleaned up List interface, visibility tags added
	* made List and Hash destructors protected to force an explicit 
	  dereference before the delete to ensure that any exceptions in 
	  contained objects can be caught