@@ -59,6 +59,7 @@ libqore_la_SOURCES = \
 	thread.cc \
 	VRMutex.cc \
 	CallStack.cc \
+	ExecArgList.cc \
 	QT_NOTHING.cc \
 	QT_bigint.cc \
 	QT_float.cc \
